[metadata]
name = holidaycal
version = 0.0.1
classifiers =
    Programming Language :: Python :: 3
    Topic :: Office/Business :: Financial
    Topic :: Office/Business :: Financial :: Investment
    Topic :: Office/Business :: Scheduling
url = https://github.com/jordanhitchcock/holidaycal
description = Holiday calendars for financial analysis
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD-3-Clause
license_file = LICENSE

[options]
packages = find:
install_requires = python-dateutil>=2.8.2
python_requires = >=3.6
include_package_data = true
test_require = pytest
